--- a/src/style/themes/dust.styl
+++ b/src/style/themes/dust.styl
@@ -2,6 +2,33 @@
 @import '../media.styl'
 @import '../font-utils.styl'
 
+@keyframes animDust {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 300, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 100, 'slnt' 0
+  }
+}
+
+@keyframes animDustAlt {
+  from {
+    font-variation-settings: 'wdth' 1000, 'wght' 300, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 100, 'slnt' 0
+  }
+}
+
+@keyframes animDustAltT {
+  from {
+    font-variation-settings: 'wdth' 530, 'wght' 300, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 100, 'slnt' 0
+  }
+}
+
 .dust
   background-color: #D5D5D5
   color: #0A1640
@@ -48,6 +75,7 @@
     font-size: pxToRem(289)
     line-height: (250 / 289)
     grtskZettaLight()
+    animation: animDust 2000ms cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite alternate
     color: #D5D5D5
     text-shadow:
       pxToRem(-2) pxToRem(-2) 0 #0A1640,
@@ -56,6 +84,11 @@
       pxToRem(2) pxToRem(2) 0 #0A1640
     .dust-t, .dust-d
       grtskMegaLight()
+      animation: animDustAlt 2000ms cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite alternate
+      +tablet()
+        animation: animDustAltT 2000ms cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite alternate
+      +mobile()
+        animation: none
     .dust-euy
       padding-bottom: pxToRem(10)
     +tablet()
@@ -66,6 +99,7 @@
     +mobile()
       font-size: pxToRem(84)
       line-height: (80 / 84)
+      animation: none
       br
         display: none
       .dust-d
