--- a/src/style/themes/hail.styl
+++ b/src/style/themes/hail.styl
@@ -2,6 +2,24 @@
 @import '../media.styl'
 @import '../font-utils.styl'
 
+@keyframes animHail {
+  from {
+    font-variation-settings: 'wdth' 1000, 'wght' 100, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 1000, 'wght' 700, 'slnt' 0
+  }
+}
+
+@keyframes animHailT {
+  from {
+    font-variation-settings: 'wdth' 530, 'wght' 100, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 530, 'wght' 700, 'slnt' 0
+  }
+}
+
 .hail
   background-color: #4A4A4A
   color: #B1B1B1
@@ -13,14 +31,17 @@
     line-height: (170 / 187)
     letter-spacing: tracking(-40)
     grtskMegaThin()
+    animation: animHail 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     +tablet()
       grtskTeraThin()
       font-size: pxToRem(173)
       line-height: (159 / 173)
+      animation: animHailT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     +mobile()
       grtskExaThin()
       font-size: pxToRem(102)
       line-height: (93 / 102)
+      animation: none
 
   .top-line
     background: linear-gradient(270deg, #C42BF2, #F2C7FF, #0000FF)
