--- a/src/style/themes/haze.styl
+++ b/src/style/themes/haze.styl
@@ -2,6 +2,24 @@
 @import '../media.styl'
 @import '../font-utils.styl'
 
+@keyframes animHaze {
+  from {
+    font-variation-settings: 'wdth' 760, 'wght' 700, 'slnt' -15
+  }
+  to {
+    font-variation-settings: 'wdth' 760, 'wght' 200, 'slnt' -15
+  }
+}
+
+@keyframes animHazeT {
+  from {
+    font-variation-settings: 'wdth' 300, 'wght' 700, 'slnt' -15
+  }
+  to {
+    font-variation-settings: 'wdth' 300, 'wght' 200, 'slnt' -15
+  }
+}
+
 .haze
   background-color: #8F8E98
   color: #FAFAFA
@@ -12,6 +30,7 @@
     line-height: (264 / 289)
     letter-spacing: tracking(-10)
     grtskGigaBoldBkslnt()
+    animation: animHaze 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     .haze-hazy-1
       display: block
       color: #D6D6D6
@@ -29,6 +48,7 @@
         pxToRem(2) pxToRem(2) 0 #D6D6D6
     +tablet()
       grtskPetaBoldBkslnt()
+      animation: animHazeT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
       font-size: pxToRem(220)
       line-height: (201 / 220)
       .haze-hazy-1
@@ -40,6 +60,7 @@
       grtskZettaSemiboldBkslnt()
       font-size: pxToRem(141)
       line-height: (129 / 141)
+      animation: none
       .haze-hazy-1
         transform: translateX(pxToRem(27)) translateZ(1px)
       .haze-hazy-2
