--- a/src/style/themes/partly-cloudy.styl
+++ b/src/style/themes/partly-cloudy.styl
@@ -2,6 +2,15 @@
 @import '../media.styl'
 @import '../font-utils.styl'
 
+@keyframes animPartlyCloudy {
+  from {
+    font-variation-settings: 'wdth' 760, 'wght' 500, 'slnt' -15
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 100, 'slnt' -15
+  }
+}
+
 .partly-cloudy
   background-color: #8895AF
   color: white
@@ -17,6 +26,7 @@
     text-align: left
     margin-left: pxToRem(430)
     grtskGigaMediumBkslnt()
+    animation: animPartlyCloudy 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     +tablet()
       font-size: pxToRem(183)
       line-height: (160 / 183)
@@ -26,6 +36,7 @@
       font-size: pxToRem(115)
       line-height: (101 / 115)
       margin-left: pxToRem(31)
+      animation: none
 
   .top-line
     background: linear-gradient(270deg, #FFFFE8, #C29EE6, #9ED2E5)
