--- a/src/style/themes/rain.styl
+++ b/src/style/themes/rain.styl
@@ -2,6 +2,24 @@
 @import '../media.styl'
 @import '../font-utils.styl'
 
+@keyframes animRain {
+  from {
+    font-variation-settings: 'wdth' 1000, 'wght' 100, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 1000, 'wght' 700, 'slnt' 0
+  }
+}
+
+@keyframes animRainT {
+  from {
+    font-variation-settings: 'wdth' 530, 'wght' 100, 'slnt' -15
+  }
+  to {
+    font-variation-settings: 'wdth' 530, 'wght' 700, 'slnt' -15
+  }
+}
+
 .rain
   background-color: #0000FF
   color: #E8E7E7
@@ -13,14 +31,18 @@
     letter-spacing: tracking(-40)
     text-align: left
     grtskMegaThin()
+    animation: animRain 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     +tablet()
       grtskTeraThin()
       font-size: pxToRem(205)
       line-height: (186 / 205)
+      animation: animRainT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     +mobile()
       grtskExaExtralight()
       font-size: pxToRem(121)
       line-height: (109 / 121)
+      animation: none
+      text-align: center
       .rain-a
         grtskMegaExtraLight()
 
