--- a/src/style/themes/sleet.styl
+++ b/src/style/themes/sleet.styl
@@ -3,6 +3,24 @@
 @import '../media.styl'
 @import '../font-utils.styl'
 
+@keyframes animSleet {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 15
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' -15
+  }
+}
+
+@keyframes animSleetSecond {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' -15
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 15
+  }
+}
+
 .sleet
   background-color: #EFEFEF
   color: $BLUE
@@ -13,9 +31,11 @@
     line-height: (200 / 270)
     grtskZettaBoldItalic()
     letter-spacing: tracking(-40)
+    animation: animSleet 2000ms cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite alternate
     .sleet-nor-snow
       grtskZettaBoldBkslnt()
       font-style: normal
+      animation: animSleetSecond 2000ms cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite alternate
     +tablet()
       font-size: pxToRem(174)
       line-height: (136 / 174)
@@ -24,6 +44,9 @@
       font-size: pxToRem(95)
       line-height: (80 / 95)
       margin: 0
+      animation: none
+      .sleet-nor-snow
+        animation: none
       br
         display: none
 
