--- a/src/style/themes/snow.styl
+++ b/src/style/themes/snow.styl
@@ -3,6 +3,96 @@
 @import '../media.styl'
 @import '../font-utils.styl'
 
+@keyframes animSnowEt {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 1000, 'wght' 400, 'slnt' 0
+  }
+}
+
+@keyframes animSnowLl {
+  from {
+    font-variation-settings: 'wdth' 1000, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 400, 'slnt' 0
+  }
+}
+
+@keyframes animSnowLlT {
+  from {
+    font-variation-settings: 'wdth' 530, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 400, 'slnt' 0
+  }
+}
+
+@keyframes animSnowI {
+  from {
+    font-variation-settings: 'wdth' 300, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 400, 'slnt' 0
+  }
+}
+
+@keyframes animSnowIT {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 400, 'slnt' 0
+  }
+}
+
+@keyframes animSnowTT {
+  from {
+    font-variation-settings: 'wdth' 1000, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 400, 'slnt' 0
+  }
+}
+
+@keyframes animSnowTTT {
+  from {
+    font-variation-settings: 'wdth' 530, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 400, 'slnt' 0
+  }
+}
+
+@keyframes animSnowSSW {
+  from {
+    font-variation-settings: 'wdth' 1000, 'wght' 700, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 0
+  }
+}
+
+@keyframes animSnowSSWT {
+  from {
+    font-variation-settings: 'wdth' 530, 'wght' 700, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 0
+  }
+}
+
+@keyframes animSnowO {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 1000, 'wght' 700, 'slnt' 0
+  }
+}
+
 .snow
   background-color: white
   color: $BLUE
@@ -18,6 +108,25 @@
     +mobile()
       font-size: pxToRem(114)
       line-height: (103 / 114)
+    .ss
+    .w
+      animation: animSnowSSW 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+      +tablet()
+        animation: animSnowSSWT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+      +mobile()
+        animation: none
+    .et
+      animation: animSnowEt 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+      +mobile()
+        animation: none
+    .ll
+      animation: animSnowLl 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+      +tablet()
+        animation: animSnowLlT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+    .tt
+      animation: animSnowTT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+      +tablet()
+        animation: animSnowTTT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     .ll
     .tt
       grtskMegaExtraLight()
@@ -25,20 +134,28 @@
         grtskTeraExtraLight()
       +mobile()
         grtskPetaExtraLight()
+        animation: none
     .i
       grtskPetaExtraLight()
+      animation: animSnowI 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
       +tablet()
         grtskZettaExtraLight()
+        animation: animSnowIT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+      +mobile()
+        animation: none
     .sn
       grtskMegaBold()
       +tablet()
         grtskTeraBold()
       +mobile()
         grtskZettaBold()
+        animation: none
     .o
       grtskZettaBold()
+      animation: animSnowO 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
       +mobile()
         grtskTeraBold()
+        animation: none
 
   .top-line
     background: linear-gradient(270deg, #C42BF2, #611AF9, #000AFF)
