--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -152,6 +152,14 @@ grtskZettaLight()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 300
 
+grtskZettaRegular()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 400, 'slnt' 0
+  +noVariable()
+    font-family: GrtskZetta, Helvetica, sans-serif
+    font-weight: 400
+
 grtskZettaMedium()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
