--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -199,6 +199,13 @@
 
 @font-face {
   font-family: "GrtskZetta";
+  src:  url("/assets/fonts/GrtskZetta-Regular.woff2") format("woff2"),
+  url("/assets/fonts/GrtskZetta-Regular.otf") format("opentype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "GrtskZetta";
   src:  url("/assets/fonts/GrtskZetta-Medium.woff2") format("woff2"),
   url("/assets/fonts/GrtskZetta-Medium.otf") format("opentype");
   font-weight: 500;
