--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -23,6 +23,13 @@ grtskPetaSemiBold()
   +noVariable()
     font-family: GrtskPeta, Helvetica, sans-serif
     font-weight: 600
+grtskPetaThinBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 300, 'wght' 100, 'slnt' -15
+  +noVariable()
+    font-family: GrtskPetaBkslnt, Helvetica, sans-serif
+    font-weight: 100
 
 grtskPetaBkslnt()
   +variable()
@@ -47,6 +54,14 @@ grtskGiga()
   +noVariable()
     font-family: GrtskGiga, Helvetica, sans-serif
     font-weight: 500
+
+grtskGigaThinBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 760, 'wght' 100, 'slnt' -15
+  +noVariable()
+    font-family: GrtskGigaBkslnt, Helvetica, sans-serif
+    font-weight: 100
 
 grtskGigaMediumBkslnt()
   +variable()
@@ -281,6 +296,14 @@ grtskExaThinBkslnt()
   +noVariable()
     font-family: GrtskExaBkslnt, Helvetica, sans-serif
     font-weight: 100
+
+grtskExaSemiboldBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 200, 'wght' 810, 'slnt' -15
+  +noVariable()
+    font-family: GrtskExaBkslnt, Helvetica, sans-serif
+    font-weight: 600
 
 grtskExaExtralight()
   +variable()
