--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -22,6 +22,13 @@
 
 @font-face {
   font-family: "GrtskGigaBkslnt";
+  src:  url("/assets/fonts/GrtskGigaBkslnt-Thin.woff2") format("woff2"),
+  url("/assets/fonts/GrtskGigaBkslnt-Thin.otf") format("opentype");
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: "GrtskGigaBkslnt";
   src: url("/assets/fonts/GrtskGigaBkslnt-Medium.woff2") format("woff2"),
     url("/assets/fonts/GrtskGigaBkslnt-Medium.otf") format("opentype");
   font-weight: 500;
@@ -162,6 +169,13 @@
 
 @font-face {
   font-family: "GrtskPetaBkslnt";
+  src:  url("/assets/fonts/GrtskPetaBkslnt-Thin.woff2") format("woff2"),
+  url("/assets/fonts/GrtskPetaBkslnt-Thin.otf") format("opentype");
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: "GrtskPetaBkslnt";
   src:  url("/assets/fonts/GrtskPetaBkslnt-Regular.woff2") format("woff2"),
   url("/assets/fonts/GrtskPetaBkslnt-Regular.otf") format("opentype");
   font-weight: 400;
@@ -263,6 +277,13 @@
   src:  url("/assets/fonts/GrtskExaBkslnt-Thin.woff2") format("woff2"),
   url("/assets/fonts/GrtskExaBkslnt-Thin.otf") format("opentype");
   font-weight: 100;
+}
+
+@font-face {
+  font-family: "GrtskExaBkslnt";
+  src:  url("/assets/fonts/GrtskExaBkslnt-Semibold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskExaBkslnt-Semibold.otf") format("opentype");
+  font-weight: 600;
 }
 
 @font-face {
