--- a/src/style/themes/mixed-rain-and-snow.styl
+++ b/src/style/themes/mixed-rain-and-snow.styl
@@ -2,6 +2,15 @@
 @import '../media.styl'
 @import '../font-utils.styl'
 
+@keyframes animMixed {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 500, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 200, 'slnt' 15
+  }
+}
+
 .mixed-rain-and-snow
   background-color: #FFFBF4
   color: #171717
@@ -12,14 +21,10 @@
     line-height: (186 / 250)
     letter-spacing: tracking(-40)
     grtskZettaMedium()
+    animation: animMixed 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     .mixed-come
-      color: #FFFBF4
       line-height: (250 / 250)
-      text-shadow:
-        pxToRem(-2) pxToRem(-2) 0 #171717,
-        pxToRem(2) pxToRem(-2) 0 #171717,
-        pxToRem(-2) pxToRem(2) 0 #171717,
-        pxToRem(2) pxToRem(2) 0 #171717
+      animation: none
       grtskGiga()
     +tablet()
       font-size: pxToRem(178)
@@ -27,6 +32,7 @@
     +mobile()
       font-size: pxToRem(135)
       line-height: (120 / 135)
+      animation: none
       .mixed-come
         grtskZettaMedium()
         line-height: (157 / 135)
