:bug: Fix weird safari bug

--- a/src/style/themes/night.styl
+++ b/src/style/themes/night.styl
@@ -23,6 +23,8 @@
     grtskZettaMediumItalic()
     animation: animNight 2s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     will-change: font-variation-settings;
+    padding: 0 pxToRem(100) pxToRem(100) 0
+    margin: 0 pxToRem(-100) pxToRem(-100) 0
     +tablet()
       font-size: pxToRem(296)
       line-height: (257 / 296)
