--- a/src/style/themes/dust.styl
+++ b/src/style/themes/dust.styl
@@ -40,13 +40,11 @@
       position: absolute
       width: 100vw - pxToRem(22)
       height: pxToRem(50)
-      top: pxToRem(145)
+      top: 50%
       left: 50%
-      transform: translateX(-50%)
-      +tablet()
-        top: pxToRem(80)
+      transform: translate(-50%, pxToRem(-85))
       +mobile()
-        top: pxToRem(35)
+        transform: translate(-50%, pxToRem(-80))
         height: pxToRem(90)
     .dust-mask
     .dust-mask-t
