--- a/src/style/themes/mixed-rain-and-snow.styl
+++ b/src/style/themes/mixed-rain-and-snow.styl
@@ -32,9 +32,8 @@
     +mobile()
       font-size: pxToRem(135)
       line-height: (120 / 135)
-      animation: none
       .mixed-come
-        grtskZettaMedium()
+        grtskZettaExtraLight()
         line-height: (157 / 135)
 
   .top-line
