--- a/src/style/themes/sunny.styl
+++ b/src/style/themes/sunny.styl
@@ -20,6 +20,15 @@
   }
 }
 
+@keyframes animSunnyM {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 500, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 100, 'slnt' 0
+  }
+}
+
 .sunny
   background-color: #FFFF00
 
@@ -29,7 +38,6 @@
     line-height: (276 / 270)
     letter-spacing: tracking(-40)
     grtskExa()
-    text-align: left
     animation: animSunny 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     +tablet()
       font-size: pxToRem(229)
@@ -38,14 +46,13 @@
       font-size: pxToRem(120)
       line-height: (125 / 120)
       grtskZettaMedium()
-      animation: none
+      animation: animSunnyM 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
 
   .sunny-up
     font-size: pxToRem(276)
     line-height: (276 / 270)
     letter-spacing: tracking(-40)
     grtskMegaMedium()
-    text-align: left
     animation: animSunnyAlt 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     +tablet()
       font-size: pxToRem(229)
@@ -53,7 +60,6 @@
     +mobile()
       font-size: pxToRem(120)
       line-height: (125 / 120)
-      animation: none
 
   .top-line
     background: linear-gradient(270deg, #F2C7FF, #FFFFE8)
