--- a/src/style/themes/foggy.styl
+++ b/src/style/themes/foggy.styl
@@ -20,6 +20,15 @@
   }
 }
 
+@keyframes animFoggyM {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 100, 'slnt' 0
+  }
+}
+
 .foggy
   background-color: #5E4662
   color: #AFAFAF
@@ -40,9 +49,8 @@
     +mobile()
       grtskZettaBold()
       font-size: pxToRem(129)
-      line-height: (107 / 129)
-      letter-spacing: tracking(-20)
-      animation: none
+      line-height: (120 / 129)
+      animation: animFoggyM 2000ms cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite alternate
 
   .top-line
     background: linear-gradient(270deg, #BEF7E6, #FFEC05, #F24C4C)
