--- a/src/style/themes/hail.styl
+++ b/src/style/themes/hail.styl
@@ -20,6 +20,15 @@
   }
 }
 
+@keyframes animHailM {
+  from {
+    font-variation-settings: 'wdth' 200, 'wght' 100, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 200, 'wght' 700, 'slnt' 0
+  }
+}
+
 .hail
   background-color: #4A4A4A
   color: #B1B1B1
@@ -41,7 +50,7 @@
       grtskExaThin()
       font-size: pxToRem(102)
       line-height: (93 / 102)
-      animation: none
+      animation: animHailM 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
 
   .top-line
     background: linear-gradient(270deg, #C42BF2, #F2C7FF, #0000FF)
