--- a/src/style/themes/partly-cloudy.styl
+++ b/src/style/themes/partly-cloudy.styl
@@ -11,6 +11,18 @@
   }
 }
 
+@keyframes animPartlyCloudyM {
+  0% {
+    font-variation-settings: 'wdth' 200, 'wght' 400, 'slnt' -15
+  }
+  33% {
+    font-variation-settings: 'wdth' 200, 'wght' 700, 'slnt' -15
+  }
+  66% {
+    font-variation-settings: 'wdth' 200, 'wght' 100, 'slnt' -15
+  }
+}
+
 .partly-cloudy
   background-color: #8895AF
   color: white
@@ -35,8 +47,9 @@
       grtskExaRegularBkslnt()
       font-size: pxToRem(115)
       line-height: (101 / 115)
+      letter-spacing: tracking(-40)
       margin-left: pxToRem(31)
-      animation: none
+      animation: animPartlyCloudyM 4000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite
 
   .top-line
     background: linear-gradient(270deg, #FFFFE8, #C29EE6, #9ED2E5)
