--- a/src/style/themes/smoky.styl
+++ b/src/style/themes/smoky.styl
@@ -38,6 +38,15 @@
   }
 }
 
+@keyframes animSmokyM {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 100, 'slnt' 0
+  }
+}
+
 .smoky
   background-color: #29355F
   color: #AFAFAF
@@ -62,7 +71,7 @@
       grtskZettaBold()
       font-size: pxToRem(129)
       line-height: (107 / 129)
-      animation: none
+      animation: animSmokyM 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
 
   .top-line
     background: linear-gradient(270deg, #BEF7E6, #FFEC05, #F24C4C)
