--- a/src/style/themes/snow.styl
+++ b/src/style/themes/snow.styl
@@ -93,6 +93,42 @@
   }
 }
 
+@keyframes animSnow_LL_M {
+  from {
+    font-variation-settings: 'wdth' 300, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 200, 'slnt' 0
+  }
+}
+
+@keyframes animSnow_T_M {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 200, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 760, 'wght' 400, 'slnt' 0
+  }
+}
+
+@keyframes animSnow_N_M {
+  from {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 530, 'wght' 700, 'slnt' 0
+  }
+}
+
+@keyframes animSnow_O_M {
+  from {
+    font-variation-settings: 'wdth' 530, 'wght' 700, 'slnt' 0
+  }
+  to {
+    font-variation-settings: 'wdth' 100, 'wght' 700, 'slnt' 0
+  }
+}
+
 .snow
   background-color: white
   color: $BLUE
@@ -123,10 +159,20 @@
       animation: animSnowLl 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
       +tablet()
         animation: animSnowLlT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+      +mobile()
+        animation: animSnow_LL_M 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     .tt
       animation: animSnowTT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
       +tablet()
         animation: animSnowTTT 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+      +mobile()
+        animation: none
+    .t
+      +mobile()
+        animation: animSnow_T_M 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
+    .n
+      +mobile()
+        animation: animSnow_N_M 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
     .ll
     .tt
       grtskMegaExtraLight()
@@ -134,7 +180,6 @@
         grtskTeraExtraLight()
       +mobile()
         grtskPetaExtraLight()
-        animation: none
     .i
       grtskPetaExtraLight()
       animation: animSnowI 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
@@ -155,7 +200,7 @@
       animation: animSnowO 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
       +mobile()
         grtskTeraBold()
-        animation: none
+        animation: animSnow_O_M 2000ms cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate
 
   .top-line
     background: linear-gradient(270deg, #C42BF2, #611AF9, #000AFF)
