--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -65,6 +65,8 @@
     line-height: (178 / 202)
     letter-spacing: tracking(-40)
     grtskGiga()
+    padding-bottom: pxToRem(100)
+    margin-bottom: pxToRem(-100)
     animation:
       animDefaultInit 750ms cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards,
       animDefaultLoop 2000ms cubic-bezier(0.445, 0.05, 0.55, 0.95) 750ms infinite alternate
